inittial style guid

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
   </title>
 </head>
 <body>
-  
+  <p>
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus possimus, similique eveniet recusandae maiores enim. Dolor nisi, quisquam rem magni ut animi corrupti sequi commodi illum corporis deleniti temporibus velit!
+  </p>
 </body>
 </html>
