--- a/index.html
+++ b/index.html
@@ -14,8 +14,24 @@
   <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Poppins:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
-  <p>
-    Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus possimus, similique eveniet recusandae maiores enim. Dolor nisi, quisquam rem magni ut animi corrupti sequi commodi illum corporis deleniti temporibus velit!
-  </p>
+  <div class="bg-surface-color">
+  <nav class="container">
+    <a href="#"id="logo">
+      <img src="assets/Logo.svg" alt="Logomarca">
+    </a>
+    <ul id="Primary-menu">
+      <li>
+        <a href="#">
+          <img src="assets/icons/MagnifyingGlass.svg" alt="ícone de lupa">
+        </a>
+      </li>
+      <li><a href="#">Explorer</a></li>
+      <li><a href="#">Minhas viagens</a></li>
+      <li><a href="#">
+        <img src="assets/Profile pic.png" alt="Imagen de Isabela Torres">
+      </a></li>
+    </ul>
+  </nav>
+  </div>
 </body>
 </html>
