--- a/index.html
+++ b/index.html
@@ -82,5 +82,16 @@
 <img src="assets/images/Image 12.png" alt="...">
 
 </main>
+<footer class="container">
+  <span>
+    Travelgram &copy; 2024
+  </span>
+  <span>
+    Temos de uso
+  </span>
+  <span>
+    Politica de privacidade.
+  </span>
+</footer>
 </body>
 </html>
